# projectrust

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: mod.rs
src/api/admin/: controller.rs  mod.rs  routes.rs  schema.rs  service.rs
src/api/auth/: controller.rs  routes.rs  schema.rs  service.rs
src/api/carousel/: controller.rs  routes.rs  schema.rs  service.rs
src/api/download/: controller.rs  mod.rs  routes.rs  service.rs
src/api/homepage/: controller.rs  mod.rs  routes.rs  schema.rs  service.rs
src/api/internal/: controller.rs  routes.rs  schema.rs  service.rs
src/api/root/: routes.rs
src/api/users/: controller.rs  mod.rs  routes.rs  schema.rs  service.rs
src/config/: db.rs  env.rs  mod.rs  pg.rs
src/core/: mod.rs
src/core/errors/: app_error.rs  mod.rs
src/core/middleware/: api_key.rs  cors.rs  jwt_auth.rs  mod.rs
src/core/utils/: jwt.rs  mod.rs  password.rs  token_hash.rs
