[package]
name = "pure-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }

# Tower & HTTP (เพิ่ม set-header)
tower = { version = "0.4", features = ["util", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "request-id", "util", "compression-full", "set-header"] }
tower_governor = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"